Hasta este momento,
El formulario envia correctamente los datos a la base de datos

Hace falta corregir que se deshabilita el boton de submit al cargar una
imagen con uploadthing

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-table": "^8.20.5",
     "@uploadthing/react": "^7.0.2",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.445.0",
